--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
     <main>
       <section id="title-and-email">
         <h1>Chickpeas</h1>
-        <form
-          id="form"
-          action="https://www.freecodecamp.com/email-submit"
-          method="post"
-        >
+        <form id="form">
           <input
             type="email"
             id="email"
