link style bold

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             id="email"
             name="email"
             placeholder="Enter your email address"
+            required
           />
           <input id="submit" type="submit" value="Submit" />
         </form>
